--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,23 +1,23 @@
 server.port=8090
 server.servlet.context-path=/
 
-#spring.datasource.url=jdbc:oracle:thin:@192.168.0.11:1521:orcsoft
-#spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-#spring.datasource.username=hr
-#spring.datasource.password=password
+spring.datasource.url=jdbc:oracle:thin:@192.168.0.11:1521:orcsoft
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+spring.datasource.username=hr
+spring.datasource.password=password
 
 spring.jpa.show-sql=true
-#spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
+spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
 
 
 spring.jpa.database=POSTGRESQL
-spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://192.168.0.11:5431/postgres
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=postgres
-spring.datasource.password=mysecretpassword
+#spring.datasource.platform=postgres
+#spring.datasource.url=jdbc:postgresql://192.168.0.11:5431/postgres
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.username=postgres
+#spring.datasource.password=mysecretpassword
 
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 spring.jpa.properties.hibernate.default_schema=HR
