--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.servlet.context-path=/
 #spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 #spring.datasource.username=hr
 #spring.datasource.password=password
-#
+#spring.jpa.database=ORACLE
 #spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
 
 
@@ -15,11 +15,19 @@ spring.datasource.url=jdbc:postgresql://192.168.0.11:5431/postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=mysecretpassword
-
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-
 spring.jpa.properties.hibernate.default_schema=HR
+
+#spring.datasource.url=jdbc:tibero:thin:@192.168.0.11:8629:ebizdb
+#spring.datasource.driver-class-name=com.tmax.tibero.jdbc.TbDriver
+#spring.datasource.username=buss
+#spring.datasource.password=password123
+#spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
+#spring.jpa.database=ORACLE
+#spring.jpa.properties.allowCustomIsolationLevels=true
+#spring.jpa.properties.hibernate.default_schema=BUSS
+
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
